rewrite calls include

--- a/source/layouts/default.ejs
+++ b/source/layouts/default.ejs
@@ -2,16 +2,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../includes/head') %>
+    <%- include('/head') %>
   </head>
   <body>
-    <%- include('../includes/header') %>
+    <%- include('/header') %>
 
     <section>
       <div class="container">
         <div class="row">
           <div class="col w1">
-            <div class="c-text">
+            <div class="b-text">
               <%- contents %>
             </div>
           </div>
@@ -19,6 +19,6 @@
       </div>
     </section>
 
-    <%- include('../includes/footer') %>
+    <%- include('/footer') %>
   </body>
 </html>
