update includea & add new

--- a/source/includes/header.ejs
+++ b/source/includes/header.ejs
@@ -1,8 +1,13 @@
 
 <header class="b-header">
   <div class="container">
-    <div class="row">
+    <div class="row b-header__row">
       <div class="col w1">
+        <div class="b-header-logo">
+          <a href="" class="b-header-logo__link">
+            <img src="assets/logo.png" alt="" class="b-header-logo__img">
+          </a>
+        </div>
       </div>
     </div>
   </div>
