--- a/source/includes/footer.ejs
+++ b/source/includes/footer.ejs
@@ -3,10 +3,12 @@
   <div class="container">
     <div class="row">
       <div class="col w1">
+        Footer
       </div>
     </div>
   </div>
 </footer>
 
-<script src="/assets/js/jquery.js"></script>
-<script src="/assets/js/main.js"></script>
+<% webpack.assetsByType.js.forEach(js => { %>
+  <script src="<%= js %>"></script>
+<% }) %>
