change base color from black to 111

--- a/source/css/_core/base.styl
+++ b/source/css/_core/base.styl
@@ -22,7 +22,7 @@ html
 body
   min-width: 320px
   background-color: $baseBackgroundColor
-  color: $black
+  color: $baseColor
   font-size: 1em
   font-family: $baseFontFamily
   line-height: 1.45
