--- a/source/css/_blocks/btn.styl
+++ b/source/css/_blocks/btn.styl
@@ -1,8 +1,7 @@
 
-.b-btn
+.btn
   user-select: none
   display: inline-block
-  margin: 5px 0
   padding: .5em 1.5em
   border: 0
   border-radius: 3px
@@ -20,3 +19,7 @@
   &:focus
     background-color: lighten($blue, 10%)
     color: $white
+    text-decoration: none
+
+.btn + .btn
+  margin-left: 10px
