--- a/content/index.ejs
+++ b/content/index.ejs
@@ -3,10 +3,20 @@ title: The title index page
 description:
 ---
 
-<h1><%= title %></h1>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temporincididunt ut
- labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
- nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
- velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
- proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col w1">
+        <div class="b-text">
+          <h1><%= title %></h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+           temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+           exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+           dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+           mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
