--- a/content/index.ejs
+++ b/content/index.ejs
@@ -7,7 +7,7 @@ description:
   <div class="container">
     <div class="row">
       <div class="col w1">
-        <div class="b-text">
+        <div class="content">
           <h1><%= title %></h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
            temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
