--- a/source/css/_blocks/text.styl
+++ b/source/css/_blocks/text.styl
@@ -1,7 +1,28 @@
 
-.b-text
+.content
   & p
     margin-bottom: rem(20px)
+
+    &:last-child
+      margin-bottom: 0
+
+  & b
+    font-weight: 700
+
+  & i
+    font-style: italic
+
+  & hr
+    margin: rem(20px) 0
+    border: 1px none $graylight
+    border-top-style: solid
+
+  & blockquote
+    margin: rem(20px) rem(30px)
+    padding: em(10px) em(15px)
+    border-left: 5px solid $green
+    color: #333
+    font-size: 1.2em
 
   & ul
   & ol
@@ -10,8 +31,8 @@
     padding: 0
     list-style-position: inside
 
-  & li
-    margin-bottom: em(5px)
+    & li
+      margin-bottom: em(5px)
 
   & table
     margin-bottom: em(20px)
@@ -28,28 +49,8 @@
     & tbody
       & td
       & th
-        padding: 5px 10px
+        padding: em(5px) em(10px)
         border: 1px solid $graylight
-
-  & blockquote
-    margin: rem(20px) rem(30px)
-    padding: em(10px) em(15px)
-    border-left: 5px solid #75b674
-    color: #333
-    font-size: 1.2em
-
-    & p:last-child
-      margin-bottom: 0
-
-  & b
-    font-weight: bold
-
-  & i
-    font-style: italic
-
-  & hr
-    margin: rem(20px) 0
-    border: 1px solid $graylight
 
   &__image-left
     float: left
