--- a/source/css/_core/base.styl
+++ b/source/css/_core/base.styl
@@ -16,8 +16,7 @@
 
 html
   font-size: $baseFontSize
-  -ms-text-size-adjust: 100%
-  -webkit-text-size-adjust: 100%
+  text-size-adjust: 100%
 
 body
   min-width: 320px
@@ -52,32 +51,6 @@ button::-moz-focus-inner
 input::-moz-focus-inner
   padding: 0
   border: 0
-
-a
-  background: transparent 0 0
-  color: $baseLinkColor
-  if $baseLinkUnderline
-    text-decoration: underline
-  else
-    text-decoration: none
-
-  &:hover
-  &:focus
-    color: $baseLinkHoverColor
-    if $baseLinkUnderline
-      text-decoration: none
-    else
-      text-decoration: underline
-
-  &:active
-    color: $baseLinkActiveColor
-
-  &:focus
-    outline: dotted thin
-
-  &:active
-  &:hover
-    outline: 0
 
 abbr[title]
   border-bottom: 1px dotted
@@ -191,15 +164,19 @@ input[type=number]::-webkit-outer-spin-button
   height: auto
 
 [type='search']
-  -webkit-appearance: textfield
+  appearance: textfield
 
 [type='search']::-webkit-search-cancel-button
 [type='search']::-webkit-search-decoration
-  -webkit-appearance: none
+  appearance: none
+
+::-webkit-file-upload-button
+  appearance: button
+  font: inherit
 
 button
 html [type='button']
 [type='reset']
 [type='submit']
   cursor: pointer
-  -webkit-appearance: button
+  appearance: button
