renamed grid && changed behavior from "in" to "max" && refact

--- a/source/css/_core/vars.styl
+++ b/source/css/_core/vars.styl
@@ -4,3 +4,11 @@ $baseBackgroundColor = darken($white, 1%)
 
 $baseFontSize = 16px
 $baseFontFamily = Arial, sans-serif
+
+$gridSizeXl = 'xl' 1240px 15px
+$gridSizeLg = 'lg' 980px 15px
+$gridSizeMd = 'md' 750px 10px
+$gridSizeSm = 'sm' 100% 5px
+$gridSizeXs = 'xs' 100% 5px
+
+$gridSystem = $gridSizeXl $gridSizeLg $gridSizeMd $gridSizeSm $gridSizeXs
