--- a/source/includes/header.ejs
+++ b/source/includes/header.ejs
@@ -1,8 +1,8 @@
 
 <header class="b-header">
-  <div class="container">
-    <div class="row b-header__row">
-      <div class="col w1">
+  <div class="l-box">
+    <div class="l-row b-header__row">
+      <div class="l-col l-col_1">
         <div class="b-header-logo">
           <a href="" class="b-header-logo__link">
             <img src="assets/logo.png" alt="" class="b-header-logo__img">
