--- a/content/index.ejs
+++ b/content/index.ejs
@@ -4,9 +4,9 @@ description:
 ---
 
 <section>
-  <div class="container">
-    <div class="row">
-      <div class="col w1">
+  <div class="l-box">
+    <div class="l-row">
+      <div class="l-col l-col_1">
         <div class="content">
           <h1><%= title %></h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
