--- a/source/css/_core/grid.styl
+++ b/source/css/_core/grid.styl
@@ -1,59 +1,41 @@
 
-.container
+.l-box
   margin-right: auto
   margin-left: auto
 
-.row
+.l-row
   display: flex
   flex-wrap: wrap
 
-.col
+.l-col
   max-width: 100%
 
+-grid-inner($width, $space, $mod = '')
+  .l-box
+    width: $width
 
-$grid-system ?= {
-  'xl': 1240px 15px
-  'lg': 980px 15px
-  'md': 750px 10px
-  'sm': 100% 5px
-  'xs': 100% 5px
-}
+  .l-row .l-row
+    margin-right: -($space)
+    margin-left: -($space)
 
+  .l-col
+    padding-right: $space
+    padding-left: $space
 
--grid-inner($arg, $mod = '')
-  .container
-    width: $arg[0]
-
-  .row .row
-    margin-right: unquote('-' + $arg[1])
-    margin-left: unquote('-' + $arg[1])
-
-  .col
-    padding-right: $arg[1]
-    padding-left: $arg[1]
-
-  .w0{$mod}
+  .l-col_0{$mod}
     flex: 1
 
   for $i in 1..5
-    .w{$i}{$mod}
+    .l-col_{$i}{$mod}
       flex: 0 (1/$i) * 100%
 
 $grid()
-  $i = 1
-  $media-var = 'in'
-
-  for $name, $arg in $grid-system
-    if $i == 1
-      -grid-inner($arg)
-
+  for $args, $index in $gridSystem
+    if $index == '0'
+      -grid-inner($args[1], $args[2])
     else
-      $media-var = 'max' if $i == length($grid-system)
-      $mod = '_' + $name
-
-      +media($media-var, $name)
-        -grid-inner($arg, $mod)
-
-    $i = $i + 1
+      $mod = '_' + $args[0]
+      +media('max', $args[0])
+        -grid-inner($args[1], $args[2], $mod)
 
 $grid()
