--- a/source/includes/footer.ejs
+++ b/source/includes/footer.ejs
@@ -1,8 +1,8 @@
 
 <footer class="b-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col w1">
+  <div class="l-box">
+    <div class="l-row">
+      <div class="l-col l-col_1">
         Footer
       </div>
     </div>
