--- a/source/layouts/simple.ejs
+++ b/source/layouts/simple.ejs
@@ -8,9 +8,9 @@
     <%- include('/header') %>
 
     <section>
-      <div class="container">
-        <div class="row">
-          <div class="col w1">
+      <div class="l-box">
+        <div class="l-row">
+          <div class="l-col l-col_1">
             <%- contents %>
           </div>
         </div>
