--- a/source/css/_core/mixins.styl
+++ b/source/css/_core/mixins.styl
@@ -5,41 +5,50 @@
  * +media('min', 'sm')                  => sm, md, lg, xl
  * +media('max', 'sm')                  => xs, sm
  * +media('in', 'md')                   => md
- * +media('in', 'sm', 'lg')             => sm, md, lg
+ * +media('in', 'xs')                   => xs
  * +media('out', 'md')                  => xs, sm, lg, xl
- * +media('out', 'sm', 'md')            => xs, lg, xl
+ * +media('out', 'xl')                  => xs, sm, md, lg
  *
  */
 
-media($type, $arg...)
-  $sizeName = {
-    xl: 4
-    lg: 3
-    md: 2
-    sm: 1
-    xs: 0
-  }
-  $sizeValue = 500px 768px 1000px 1260px
+$mediaSizeXl = 'xl' 1260px
+$mediaSizeLg = 'lg' 1000px
+$mediaSizeMd = 'md' 768px
+$mediaSizeSm = 'sm' 500px
+$mediaSizeXs = 'xs' 0
 
-  if $type == 'max'
-    $media_where = '(max-width $sizeValue[$sizeName[$arg[0]]] - 1)'
+$mediaSystem = $mediaSizeXl $mediaSizeLg $mediaSizeMd $mediaSizeSm $mediaSizeXs
+$mediaSystemLength = length($mediaSystem) - 1
 
-  else if $type == 'min'
-    $media_where = '(min-width $sizeValue[$sizeName[$arg[0]] - 1])'
+media($type, $point)
+  $position = index(keys($mediaSystem), $point)
+
+  if ($type == 'max' && $position != 0) || ($type == 'in' && $position == $mediaSystemLength)
+    $mediaWhere = '(max-width $mediaSystem[$position - 1][1] - 1)'
+
+  else if ($type == 'min' && $position != $mediaSystemLength) || ($type == 'in' && $position == 0)
+    $mediaWhere = '(min-width $mediaSystem[$position][1])'
 
   else if $type == 'in'
-    $media_where_first = $sizeValue[$sizeName[$arg[0]] - 1]
-    $media_where_second = (length($arg) == 1) ? $sizeValue[$sizeName[$arg[0]]] - 1 : $sizeValue[$sizeName[$arg[1]]] - 1
-    $media_where = '(min-width $media_where_first) and (max-width $media_where_second)'
+    $mediaWhereFirst = $mediaSystem[$position][1]
+    $mediaWhereSecond = $mediaSystem[$position - 1][1] - 1
+    $mediaWhere = '(min-width $mediaWhereFirst) and (max-width $mediaWhereSecond)'
 
   else if $type == 'out'
-    $media_where_first = $sizeValue[$sizeName[$arg[0]] - 1] - 1
-    $media_where_second = (length($arg) == 1) ? $sizeValue[$sizeName[$arg[0]]] : $sizeValue[$sizeName[$arg[1]]]
-    $media_where = '(max-width $media_where_first), (min-width $media_where_second)'
+    if ($position == $mediaSystemLength)
+      $mediaWhere = '(min-width $mediaSystem[$position - 1][1])'
+    else if ($position == 0)
+      $mediaWhere = '(max-width $mediaSystem[$position][1] - 1)'
+    else
+      $mediaWhereFirst = $mediaSystem[$position][1] - 1
+      $mediaWhereSecond = $mediaSystem[$position - 1][1]
+      $mediaWhere = '(max-width $mediaWhereFirst), (min-width $mediaWhereSecond)'
 
-  if $media_where
-    @media $media_where
+  if $mediaWhere is defined
+    @media $mediaWhere
       {block}
+  else
+    {block}
 
 
 
