removed grid vars in grid styl file

--- a/source/css/_core/grid.styl
+++ b/source/css/_core/grid.styl
@@ -1,4 +1,12 @@
 
+$gridSizeXl = 'xl' 1240px 15px
+$gridSizeLg = 'lg' 980px 15px
+$gridSizeMd = 'md' 750px 10px
+$gridSizeSm = 'sm' 100% 5px
+$gridSizeXs = 'xs' 100% 5px
+
+$gridSystem = $gridSizeXl $gridSizeLg $gridSizeMd $gridSizeSm $gridSizeXs
+
 .l-box
   margin-right: auto
   margin-left: auto
