--- a/source/includes/animal.ejs
+++ b/source/includes/animal.ejs
@@ -1,5 +1,5 @@
 
-<div class="b-animal">
-  <div class="b-animal__type"><%= animal.type %></div>
-  <div class="b-animal__weight"><%= animal.weight %></div>
+<div class="animal">
+  <div class="animal__type"><%= animal.type %></div>
+  <div class="animal__weight"><%= animal.weight %></div>
 </div>
