--- a/source/includes/faq.ejs
+++ b/source/includes/faq.ejs
@@ -1,6 +1,6 @@
 
-<div class="b-faq">
-  <div class="b-faq__name"><%= item.name %></div>
-  <div class="b-faq__question"><%= item.question %></div>
-  <div class="b-faq__answer"><%- item.contents %></div>
+<div class="faq">
+  <div class="faq__name"><%= item.name %></div>
+  <div class="faq__question"><%= item.question %></div>
+  <div class="faq__answer"><%- item.contents %></div>
 </div>
