--- a/source/includes/header.ejs
+++ b/source/includes/header.ejs
@@ -1,11 +1,11 @@
 
-<header class="b-header">
+<header class="header">
   <div class="l-box">
-    <div class="l-row b-header__row">
+    <div class="l-row header__row">
       <div class="l-col l-col_1">
-        <div class="b-header-logo">
-          <a href="" class="b-header-logo__link">
-            <img src="assets/logo.png" alt="" class="b-header-logo__img">
+        <div class="headerLogo">
+          <a class="headerLogo__link" href="">
+            <img class="headerLogo__img" src="assets/logo.png" alt="">
           </a>
         </div>
       </div>
