--- a/source/includes/article.ejs
+++ b/source/includes/article.ejs
@@ -1,9 +1,9 @@
 
-<div class="b-article">
-  <div class="b-article__title">
+<div class="article">
+  <div class="article__title">
     <a href="<%= article.path %>"><%= article.title %></a>
   </div>
-  <div class="b-article__introtext">
+  <div class="article__introtext">
     <%= article.introtext %>
   </div>
 </div>
