--- a/source/includes/footer.ejs
+++ b/source/includes/footer.ejs
@@ -1,5 +1,5 @@
 
-<footer class="b-footer">
+<footer class="footer">
   <div class="l-box">
     <div class="l-row">
       <div class="l-col l-col_1">
